updated seed file with postings and companies; tweaked/added some user profile features

--- a/index.scss
+++ b/index.scss
@@ -69,8 +69,28 @@ body {
 		margin-top: 20px;
 		padding-top: 20px;
 		line-height: 30px;
-		width: 80%;
+		margin-left: 20px;
+
+		width: 70%;
+		// margin: auto;
+	}
+	.profile-container {
+		margin-top: 20px;
+		// padding-top: x;
+		line-height: 30px;
+		margin-left: 20px;
+		width: 70%;
+		// margin: auto;
+	}
+
+	.educationUpdate {
+		width: 50%
+	}
+
+	.skills-box {
+		width: 50%;
 		margin: auto;
+		display: flex;
 	}
 	//
 	// .application h2 {
@@ -272,6 +292,14 @@ body {
 		font-size: 1.3em;
 	}
 
+	input[type='checkbox'] {
+		float: left;
+		width: 20px;
+	}
+	input[type='checkbox'] + label {
+		display: block;
+		width: 30px;
+	}
 }
 
 
