--- a/index.scss
+++ b/index.scss
@@ -1,6 +1,6 @@
 
 body {
-	font-family:  'Halant', serif;
+	font-family:  'Raleway', sans-serif;
 	margin: 0;
 	padding: 0;
 	border: none;
@@ -10,6 +10,15 @@ body {
 		padding: 0;
 		border: none;
 		box-sizing: border-box;
+	}
+	.single-posting p {
+		padding: .2em .6em .3em;
+	}
+
+	.single-posting textarea {
+		padding: .2em .6em .3em;
+		width: 50vw;
+		height: 30vh;
 	}
 
 	.postings-div{
@@ -53,7 +62,7 @@ body {
 		margin: auto;
 		padding-left: 40px;
 		padding-right: 40px;;
-		font-family: 'Open Sans';
+		font-family:  'Raleway', sans-serif;
 		top: 325px;
 		color: black;
 		font-size: 60px;
@@ -151,7 +160,7 @@ body {
 	// margin: auto;
 	// color: #5D6063;
 	// background-color: #EAEDF0;
-	// font-family: "Helvetica", "Arial", sans-serif;
+	// 	font-family:  'Raleway', sans-serif;
 	// font-size: 16px;
 	// display: flex;
 	// flex-direction: column;
@@ -195,6 +204,10 @@ body {
 	.form-flex {
 		display: flex;
 		justify-content: center
+	}
+
+	.single-posting {
+		align-content: center;
 	}
 
 	.cover {
@@ -333,7 +346,7 @@ body {
 
 	.home-page-marketing h1 {
 		text-align: center;
-		// font-family: 'open sans', sans-serif;
+		// 	font-family:  'Raleway', sans-serif;
 		font-size: 1.3em;
 	}
 
@@ -374,7 +387,7 @@ body {
 	// }
 	//
 	// body {
-	// 	font-family:  'Halant', serif;
+// 		font-family:  'Raleway', sans-serif;
 	// }
 	//
 	// #home div{
@@ -393,7 +406,7 @@ body {
 	// 	// border: none;
 	// 	box-sizing: border-box;
 	// 	line-height: 1.2em;
-	// 	// font-family: 'Open Sans', sans-serif;
+	// 	//	font-family:  'Raleway', sans-serif;
 	// }
 	//
 	//
@@ -412,7 +425,7 @@ body {
 	// // }
 	// //
 	// // body {
-	// // 	font-family:  'Halant', serif;
+// // 		font-family:  'Raleway', sans-serif;
 	// // }
 	// //
 	// //
