--- a/index.scss
+++ b/index.scss
@@ -234,9 +234,12 @@ body {
 	}
 
 	#home{
+		position: absolute;
 		align-items: center;
 		justify-content: center;
 		clear: both;
+		width: 30vw;
+		background-color: white;
 	}
 	#button-div {
 		display: flex;
@@ -253,14 +256,18 @@ body {
 	}
 
 	.cover {
-		height: 850px;
+
+		height: 85vh;
 		display: flex;
 		overflow: hidden;
 		align-items: center;
 		justify-content: center;
-		justify-text: center;
+
 	}
 
+	#slogan {
+		font-size: 1em;
+	}
 	.wide-image {
 	    width: 100%;
 			height: 100%;
